fix(numbering): harden rule reliability and concurrency